--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ code {
 
 .navbar {
   padding: 3%;
-  background-color: rgb(230, 180, 173);
+  background-color: rgb(235, 191, 163);
   color: black;
 }
 
@@ -22,20 +22,23 @@ code {
   font-size: 22px;
   font-weight: 700;
   padding: 1%;
-  margin:2%;
+  margin:5%;
   text-decoration: none;
-  color: white;
+  color: rgb(72, 118, 66);
+  background-color:rgb(193, 225, 174);
 }
 
 #main-nav {
   margin-left: 0px;
   font-size: 40px;
+  color: white;
+  background-color:rgb(235, 191, 163)
 }
 
 .button {
   padding:15px;
   margin: 10px;
-  background-color: rgb(235, 140, 140);
+  background-color: rgb(225, 170, 136);
   color: white;
   height: 70px;
   font-size: 20px;
@@ -43,7 +46,7 @@ code {
 }
 
 #habitat {
-  background-color:rgb(230, 180, 173);
+  background-color:rgb(225, 170, 136);
   padding: 15px;
   margin: 20px;
   border-radius: 25px;
@@ -52,7 +55,7 @@ code {
 #homepage {
   margin: auto;
   width: 70%;
-  background-color:rgb(149, 182, 138);
+  background-color: rgb(225, 170, 136);
   color: white;
   padding: 30px;
   margin-top: 10%;
@@ -65,5 +68,6 @@ code {
   margin: 30px;
   height: 60px;
   font-size: large;
-  background-color:rgb(230, 180, 173);
+  background-color:rgb(173, 205, 154);
+  color: white;
 }
