--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@ code {
   font-size: 22px;
   font-weight: 700;
   padding: 1%;
-  margin:5%;
+  margin:3%;
   text-decoration: none;
   color: rgb(72, 118, 66);
   background-color:rgb(207, 237, 190);
@@ -32,7 +32,13 @@ code {
   margin-left: 0px;
   font-size: 40px;
   color: white;
-  background-color:rgb(235, 191, 163)
+  background-color:rgb(235, 191, 163);
+}
+
+.small-nav {
+  font-size: x-small;
+  background-color:rgb(247, 211, 189);
+  color:rgb(201, 120, 101);
 }
 
 .button {
